# rational-linkages

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: wheels.yml
binder/: environment.yml
docs/source/: background-math.rst  conf.py  general.rst  index.rst  linkages.rst  mechanism.rst  modules.rst  rational_linkages.rst  refs-weblinks.rst  refs.bib  tutorials.rst
docs/source/background-math/: affine-metric.rst  comb-optim.rst  dualquaternions.rst  joint-angle-to-t.rst  motion-interp-4p.rst  motions_and_factorization.rst  points-lines.rst  studys-kinematics.rst
docs/source/background-math/figures/: study-quadric.afdesign
docs/source/general/: changelog.rst  contribute.rst  installation.rst  overview.rst
docs/source/tutorials/: ark2024.rst  bennett_synthesis.ipynb  cad.rst  combinatorial_search.rst  control.rst  exudyn_analysis.rst  getting_started.rst  loading_bennett.rst  loading_models.rst  mechanism_with_tool.rst  motion_designer.rst  motion_factorization.rst  motion_interp.rst  motion_recovering.rst  plotting.rst  rational_pluecker_lines.rst  synthesis_bennett.ipynb  test.ipynb  trajectory_planning.ipynb
python/examples/: approx_motion.py  approx_motion_pts.py  bennett.pkl  bennett.py  bennett_jup.py  biquaternion_factorization.py  combinatorial_search.py  cur.py  daren_test.py  exudyn_contact.py  exudyn_dynamics.py  exudyn_dynamics6r.py  exudyn_dynamics_stl.py  exudyn_my4bar.py  four_bar.py  hp.py  interp.py  interp_2poses.py  interp_rebase.py  limancon2bezier_split.py  loading_models.py  main.py  mechanism_collisions_roots.py  mechanism_plot.py  metric.py  motion_designer.py  plotting.py  qb-interpolation.py  r6_mechs.py  rational_pluecker_lines.py  regenerate_models.py  release_notes.py  singularity.py  spherical_mechanism.py  tom.py  tom_bennett.py  tom_zijias_6r.py
python/linkages/: AffineMatrix.py  AffineMetric.py  ButtonID.py  DualQuaternion.py  FactorizationProvider.py  JointConnections.py  Linkage.py  MiniBall.py  MotionApproximation.py  MotionFactorization.py  NormalizedLine.py  Plotter.py  PointHomogeneous.py  Quaternion.py  RationalBezier.py  RationalCurve.py  RationalDualQuaternion.py  RationalMechanism.py  TransfMatrix.py
python/rational-linkages/: DualQuaternion.py  DualQuaternionAction.py  FactorizationProvider.py  MotionFactorization.py  MotionInterpolation.py  NormalizedLine.py  Plotter.py  RationalBezier.py  RationalCurve.py
python/rational_linkages/: AffineMetric.py  CollisionAnalyser.py  CollisionFreeOptimization.py  CollisionsFreeOptimization.py  DualQuaternion.py  DualQuaternionAction.py  ExudynAnalysis.py  FactorizationProvider.py  Linkage.py  LinkageCAD.py  MiniBall.py  MiniBall2.py  MotionApproximation.py  MotionDesigner.py  MotionDesignerApp.py  MotionFactorization.py  MotionInterpolation.py  NormalizedLine.py  NormalizedPlane.py  Plotter.py  PlotterMatplotlib.py  PlotterPyqtgraph.py  PlotterVispy.py  PointHomogeneous.py  Quaternion.py  RationalBezier.py  RationalCurve.py  RationalDualQuaternion.py  RationalMechanism.py  SingularityAnalysis.py  StaticMechanism.py  TransfMatrix.py  __init__.py  models.py  utils.py  utils_compute.py
python/rational_linkages/data/: bennett_ark24.pkl  collisions_free_6r.pkl  interp_4poses_6r.pkl  plane_fold_6r.pkl
python/tests/: bennett.pkl  test_AffineMetric.py  test_CollisionFreeOptimization.py  test_DualQuaternion.py  test_ExudynAnalysis.py  test_FactorizationProvider.py  test_Linkage.py  test_MiniBall.py  test_MotionFactorization.py  test_MotionInterpolation.py  test_NormalizedLine.py  test_NormalizedPlane.py  test_Plotter.py  test_PointHomogeneous.py  test_Quaternion.py  test_RationalBezier.py  test_RationalCurve.py  test_RationalDualQuaternion.py  test_RationalMechanism.py  test_StaticMechanism.py  test_TransfMatrix.py  test_models.py  test_utils.py
python/tests_manual/: test_Plotter.py  test_examples.py
python/tests_plotting/: test_Plotter.py
rust/: Cargo.toml  lib.rs
src/: lib.rs
