[project]
name = "rational-linkages"
version = "0.1.0"
description = "Rational Linkages Toolbox"
authors = ["daniel"]
license = "GPL-3.0-or-later"
readme = "README.md"

[project.dependencies]
python = "^3.11"
scipy = "^1.11"
sympy = "^1.11"
matplotlib = "^3.7"
biquaternion-py = "^1.0.0"
PyQt5 = "^5.15.10"

[project.optional-dependencies]
doc = [
    "sphinx",
    "sphinx-rtd-theme",
    "nbsphinx"
]

dev = [
    "coverage",
    "flake8",
    "black"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = "(.git|.idea|maple|docs)/.*"

[tool.isort]
profile = "black"
line_length = 88
skip = [".git", ".idea", "docs"]
known_first_party = ["linkages"]
force_to_top = ["linkages"]

[tool.flake8]
max-line-length = '88'
ignore = ["E501"]
exclude = ".git, .idea, docs"
