[build-system]
requires = [
    "setuptools>=61",
    "setuptools-rust>=1.6",
    "wheel",
    "cibuildwheel>=2.16",
]
build-backend = "setuptools.build_meta"

[project]
name = "rational-linkages"
version = "1.11.dev1"
description = "Rational Linkages"
authors = [
    {name = "Daniel Huczala", email = "daniel.huczala@uibk.ac.at"},
]
requires-python = ">=3.10"
license = {"file"= "LICENSE"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

dependencies = [
    "scipy >= 1.10.0",
    "sympy >= 1.10.0",
    "biquaternion-py >= 1.2.0",
    "PyQt6 >= 6.2.0",
    "pyqtgraph >= 0.12.4",
    "PyOpenGL >= 3.0.0",
]

[project.optional-dependencies]
opt = [
    "ipython >= 8.0.0",
    "matplotlib >= 3.9.0",
    "gmpy2 >= 2.2.0",
    "exudyn >= 1.9.0",
    "numpy-stl >= 3.0.0",
]
doc = [
    "sphinx",
    "sphinx-rtd-theme",
    "nbsphinx",
    "sphinxcontrib-bibtex",
    "toml",
    "pandoc",
    "sphinx-hoverxref",
    "gitpython",
]
dev = [
    "build",
    "coverage",
    "pytest",
    "flake8",
    "flake8-pyproject",
    "black",
    "isort",
    "twine",
]

[tool.setuptools.packages.find]
where = ["python"]
include = ["rational_linkages*"]

[tool.setuptools.package-data]
"rational_linkages.data" = ["*.pkl"]

[[tool.setuptools-rust.ext-modules]]
target = "rational_linkages.utils_rust"
path = "rust/Cargo.toml"
binding = "PyO3"

[tool.cibuildwheel]
build = "*"
skip = "pp*"
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
environment = { CARGO_TERM_COLOR = "always" }
#before-build = "pip install ."
#test-command = "pytest {package}/python/tests"
#test-skip = ["*-macosx_arm64", "*-macosx_x86_64"]

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
environment = { PATH = "$HOME/.cargo/bin:$PATH" }
before-build = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y"

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.cibuildwheel.macos]
archs = ["arm64", "x86_64"]
environment = { MACOSX_DEPLOYMENT_TARGET = "12.0.1" }

[project.urls]
Homepage = "https://git.uibk.ac.at/geometrie-vermessung/rational-linkages"
Documentation = "http://rational-linkages.readthedocs.io/"
Issues = "https://github.com/hucik14/rational-linkages/issues"

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = "(.git|.idea|docs|dist|rational_linkages.egg-info)/.*"

[tool.isort]
profile = "black"
line_length = 88
skip = [".git", ".idea", "docs", "dist", "rational_linkages.egg-info"]
known_first_party = ["rational_linkages"]
force_to_top = ["rational_linkages"]

[tool.flake8]
max-line-length = '88'
ignore = ["E501"]
exclude = ".git, .idea, docs, dist, rational_linkages.egg-info"

[tool.coverage.run]
command_line = "-m pytest python/tests"
omit = [
    "*/test*",
    "*__init__.py",
    "*Plotter.py",
    "*MotionApproximation.py",
    "*StaticMechanism.py",
    "*AffineMetric.py",
    ]
